Added more html to text.

--- a/about.html
+++ b/about.html
@@ -9,6 +9,12 @@
 <body>
     <!-- Hamburger Menu Icon -->
     <header>
+        <div class="logo">
+            <a href="work.html"> <!-- Link to the homepage or main page -->
+                <img src="../IDM221-el686/Images/about/logo.png" alt="Esther's Logo">
+            </a>
+        </div>
+
         <div class="hamburger-menu">
             <div></div>
             <div></div>
@@ -39,6 +45,9 @@
     <section class="project-placeholder">
         <div class="image-placeholder"></div> <!-- Placeholder for future content -->
     </section>
+
+    <!-- Image -->
+    <img src="../IDM221-el686/Images/about/esther.jpg" alt="esther profile image"/>
 
     <!-- Back to Top -->
     <footer>
