--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <!-- Hamburger Menu Icon -->
     <header>
         <div class="logo">
-            <a href="work.html"> <!-- Link to the homepage or main page -->
+            <a href="index.html"> <!-- Link to the homepage or main page -->
                 <img src="../IDM221-el686/Images/about/logo.png" alt="Esther's Logo">
             </a>
         </div>
