Updates to all the html files
Added footers, text and links

--- a/Index.html
+++ b/Index.html
@@ -9,14 +9,34 @@
 <body>
     <!-- Hamburger Menu Icon -->
     <header>
- 
-
         <div class="hamburger-menu">
             <div></div>
             <div></div>
             <div></div>
         </div>
     </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <div class="logo">
+            <!-- Clicking on logo will navigate to index.html -->
+            <a href="index.html">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo">
+            </a>
+        </div>
+        <!-- Initially hidden links, shown when hamburger menu is clicked -->
+        <ul class="nav-links" id="nav-links">
+            <li><a href="work.html">My Work</a></li>
+            <li><a href="book.html">Susan Sontag Series</a></li>
+            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
+            <li><a href="minhwa.html">Minhwa Coffee</a></li>
+            <li><a href="tss.html">The Smart Set Illustrations</a></li>
+            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
+            <li><a href="onni.html">Onni</a></li>
+
+        </ul>
+    </nav>
+
 
     <!-- Profile Section -->
     <section class="profile">
@@ -33,8 +53,8 @@
     <!-- Contact Section -->
     <section class="contact">
         <p>Contact me: <a href="mailto:el686@drexel.edu">el686@drexel.edu</a></p>
-        <p><a href="#">LinkedIn</a></p>
-        <p><a href="#">Instagram</a></p>
+        <p><a href="https://www.linkedin.com/in/esther-lee-05ba84276/">LinkedIn</a></p>
+        <p><a href="https://www.instagram.com/esthercreativity/?hl=en">Instagram</a></p>
     </section>
 
     <!-- Placeholder for Project/Image -->
@@ -47,7 +67,7 @@
 
     <!-- Back to Top -->
     <footer>
-        <a href="#top">Back to the Top ^</a>
+        <a href="#top">Back to the Top</a>
     </footer>
 </body>
 </html>
