--- a/book.html
+++ b/book.html
@@ -2,19 +2,55 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
- <title>My Document Title</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Portfolio - Esther Lee - book series</title>
+ <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
+    <!-- Hamburger Menu Icon -->
+    <header>
+        <div class="hamburger-menu">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <div class="logo">
+            <!-- Clicking on logo will navigate to index.html -->
+            <a href="index.html">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo">
+            </a>
+        </div>
+        <!-- Initially hidden links, shown when hamburger menu is clicked -->
+        <ul class="nav-links" id="nav-links">
+            <li><a href="work.html">My Work</a></li>
+            <li><a href="book.html">Susan Sontag Series</a></li>
+            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
+            <li><a href="minhwa.html">Minhwa</a></li>
+            <li><a href="tss.html">The Smart Set Illustrations</a></li>
+            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
+            <li><a href="onni.html">Onni</a></li>
+
+        </ul>
+    </nav>
+
+
+<!--Content-->
+
+ <title>Susan Sontag Series</title>
 </head>
 <body>
- <h1>Welcome to my page.</h1>
- <img src="../images/skatedog.jpg" alt="a dog on a skateboard" />
- <p>
- Lorem ipsum dolor sit amet, consectetur adipisicing elit,
- sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
- Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
- nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
- reprehenderit in voluptate velit esse cillum dolore eu fugiat
- nulla pariatur. Excepteur sint occaecat cupidatat non proident,
- sunt in culpa qui officia deserunt mollit anim id est laborum.
- </p>
+ <h1>Susan Sontag Book Series</h1>
+ <p>This book cover series reinterprets Susan Sontag’s iconic works through bold, modern design. Each cover uses a structured grid, striking patterns, and textured overlays to capture the provocative essence of her essays.</p>
+ <img src="Images/bookseries/against.jpg" alt="Against Interpretation" />
+ <img src="Images/bookseries/photography.jpg" alt="On Photography" />
+ <img src="Images/bookseries/camp.jpg" alt="Notes on Camp" />
+</body
+
+ <footer>
+    <a href="#top">Back to the Top</a>
+</footer>
+
 </body>
 </html>
