--- a/pca.html
+++ b/pca.html
@@ -21,7 +21,7 @@
         <div class="logo">
             <!-- Clicking on logo will navigate to index.html -->
             <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
             </a>
         </div>
         <!-- Initially hidden links, shown when hamburger menu is clicked -->
@@ -47,8 +47,7 @@
      <img src="Images/pca/poster1.jpg" alt="PCA posters 1"/>
      <img src="Images/pca/poster2.jpg" alt="PCA posters 2"/>
      <img src="Images/pca/poster3.jpg" alt="PCA posters 3"/>
-    </body>
-     <!--footer-->
+</body>
     <footer>
         <a href="#top">Back to the Top</a>
     </footer>
