--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
         <div class="logo">
             <!-- Clicking on logo will navigate to index.html -->
             <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
             </a>
         </div>
         <!-- Initially hidden links, shown when hamburger menu is clicked -->
@@ -63,7 +63,7 @@
     </section>
 
     <!-- Image -->
-    <img src="../IDM221-el686/Images/about/esther.jpg" alt="esther profile image"/>
+    <img src="../IDM221-el686/Images/about/esther.jpg" alt="esther profile image" class="container-image"/>
 
     <!-- Back to Top -->
     <footer>
