--- a/book.html
+++ b/book.html
@@ -4,6 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Portfolio - Esther Lee - book series</title>
+ </head>
  <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
     <!-- Hamburger Menu Icon -->
     <header>
@@ -19,7 +20,7 @@
         <div class="logo">
             <!-- Clicking on logo will navigate to index.html -->
             <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
             </a>
         </div>
         <!-- Initially hidden links, shown when hamburger menu is clicked -->
