--- a/onni.html
+++ b/onni.html
@@ -21,7 +21,7 @@
         <div class="logo">
             <!-- Clicking on logo will navigate to index.html -->
             <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
             </a>
         </div>
         <!-- Initially hidden links, shown when hamburger menu is clicked -->
