--- a/work.html
+++ b/work.html
@@ -2,7 +2,41 @@
 <html lang="en">
 <head>
  <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>My Work</title>
+ <link rel="stylesheet" href="styles.css">
+</head>
+
+    <!-- Hamburger Menu Icon -->
+    <header>
+        <div class="hamburger-menu">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <div class="logo">
+            <!-- Clicking on logo will navigate to index.html -->
+            <a href="index.html">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+            </a>
+        </div>
+        <!-- Initially hidden links, shown when hamburger menu is clicked -->
+        <ul class="nav-links" id="nav-links">
+            <li><a href="work.html">My Work</a></li>
+            <li><a href="book.html">Susan Sontag Series</a></li>
+            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
+            <li><a href="minhwa.html">Minhwa Coffee</a></li>
+            <li><a href="tss.html">The Smart Set Illustrations</a></li>
+            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
+            <li><a href="onni.html">Onni</a></li>
+
+        </ul>
+    </nav>
+
 </head>
 <body>
  <h1>My Work</h1>
