--- a/pca.html
+++ b/pca.html
@@ -27,6 +27,7 @@
         <!-- Initially hidden links, shown when hamburger menu is clicked -->
         <ul class="nav-links" id="nav-links">
             <li><a href="work.html">My Work</a></li>
+            <li><a href="Index.html">About Me</a></li>
             <li><a href="book.html">Susan Sontag Series</a></li>
             <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
             <li><a href="minhwa.html">Minhwa</a></li>
@@ -40,7 +41,7 @@
     <title>Onni</title>
     </head>
     <body>
-     <h1>Philadelphia Corporation of Aging</h1>
+     <h1>Philadelphia Corporation for Aging</h1>
      <p>Founded in 1973, the Philadelphia Corporation for Aging (PCA) is a nationally recognized agency supporting older Philadelphians and individuals with disabilities in achieving health, independence, and productivity. The PCA rebrand emphasizes the enriching lives of older adults, showcasing unity and positivity through intentional design.</p>
      <img src="Images/pca/thumbnail.jpg" alt="PCA thumbnail"/>
      <img src="Images/pca/food.jpg" alt="PCA food merchandise"/>
