CSS & Java Script
Adjusted the header to enable hamburger icon

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Esther Lee</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -16,16 +17,17 @@
             <div class="bar"></div>
             <div class="bar"></div>
         </div>
-    </header>
 
-    <!-- Navigation Bar -->
-    <nav>
         <div class="logo">
             <a href="index.html">
                 <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
             </a>
         </div>
-        <ul class="nav-links" id="nav-links">
+    </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <ul id="nav-links" class="nav-links">
             <li><a href="work.html">My Work</a></li>
             <li><a href="Index.html">About Me</a></li>
             <li><a href="book.html">Susan Sontag Series</a></li>
