--- a/minhwa.html
+++ b/minhwa.html
@@ -43,12 +43,12 @@
 <body>
  <h1>Minhwa Coffee Branding</h1>
  <p>Inspired by traditional Korean minhwa art, this coffee brand embodies encouragement and well-wishing through symbolic imagery like tigers, peonies, and carp. Each flavor highlights an iconic minhwa motif, with packaging designed for versatile settings, making it perfect for mornings and evenings. Ornamental graphics and meaningful designs aim to uplift with every sip.</p>
- <img src="Images/minhwa/mint_digi.jpg" alt="Minhwa Coffee Mock Up"/>
- <img src="Images/minhwa/pink_digi.jpg" alt="Minhwa Coffee Mock Up 2" />
- <img src="Images/minhwa/full.jpg" alt="Minhwa Collage"/>
- <img src="Images/minhwa/type.jpg" alt="Minhwa Branding"/>
- <img src="Images/minhwa/box.jpg" alt="Minhwa Box"/>
- <img src="Images/minhwa/can.jpg" alt="Minhwa Cans"/>
+ <img src="Images/minhwa/mint_digi.jpg" alt="Minhwa Coffee Mock Up" class="container-image"/>
+ <img src="Images/minhwa/pink_digi.jpg" alt="Minhwa Coffee Mock Up 2" class="container-image" />
+ <img src="Images/minhwa/full.jpg" alt="Minhwa Collage" class="container-image"/>
+ <img src="Images/minhwa/type.jpg" alt="Minhwa Branding" class="container-image"/>
+ <img src="Images/minhwa/box.jpg" alt="Minhwa Box" class="container-image"/>
+ <img src="Images/minhwa/can.jpg" alt="Minhwa Cans" class="container-image"/>
 </body>
 
  <footer>
