--- a/pca.html
+++ b/pca.html
@@ -43,11 +43,11 @@
     <body>
      <h1>Philadelphia Corporation for Aging</h1>
      <p>Founded in 1973, the Philadelphia Corporation for Aging (PCA) is a nationally recognized agency supporting older Philadelphians and individuals with disabilities in achieving health, independence, and productivity. The PCA rebrand emphasizes the enriching lives of older adults, showcasing unity and positivity through intentional design.</p>
-     <img src="Images/pca/thumbnail.jpg" alt="PCA thumbnail"/>
-     <img src="Images/pca/food.jpg" alt="PCA food merchandise"/>
-     <img src="Images/pca/poster1.jpg" alt="PCA posters 1"/>
-     <img src="Images/pca/poster2.jpg" alt="PCA posters 2"/>
-     <img src="Images/pca/poster3.jpg" alt="PCA posters 3"/>
+     <img src="Images/pca/thumbnail.jpg" alt="PCA thumbnail" class="container-image"/>
+     <img src="Images/pca/food.jpg" alt="PCA food merchandise" class="container-image"/>
+     <img src="Images/pca/poster1.jpg" alt="PCA posters 1" class="container-image"/>
+     <img src="Images/pca/poster2.jpg" alt="PCA posters 2" class="container-image"/>
+     <img src="Images/pca/poster3.jpg" alt="PCA posters 3" class="container-image"/>
 </body>
     <footer>
         <a href="#top">Back to the Top</a>
