--- a/tss.html
+++ b/tss.html
@@ -41,12 +41,12 @@
     <body>
     <h1>The Smart Set Illustrations</h1>
     <p>Before its discontinuation in 2024, The Smart Set was an online magazine covering pop culture, arts, science, and current affairs. Through a Pennoni Honors College co-op, weekly article illustrations were created, including a feature and an accompanying image for each narrative. The digital format offered an opportunity to experiment with diverse art styles for online publication.</p>
-    <img src="../IDM221-el686/Images/tss/debarges.jpg" alt="Debarges"/>
-    <img src="../IDM221-el686/Images/tss/library.jpg" alt="Library"/>
-    <img src="../IDM221-el686/Images/tss/pokey.jpg" alt="Pokey"/>
-    <img src="../IDM221-el686/Images/tss/sell.jpg" alt="The Hard Sell"/>
-    <img src="../IDM221-el686/Images/tss/stone.jpg" alt="The Stone"/>
-    <img src="../IDM221-el686/Images/tss/trail.jpg" alt="Trail"/>
+    <img src="../IDM221-el686/Images/tss/debarges.jpg" alt="Debarges" class="container-image"/>
+    <img src="../IDM221-el686/Images/tss/library.jpg" alt="Library" class="container-image"/>
+    <img src="../IDM221-el686/Images/tss/pokey.jpg" alt="Pokey" class="container-image"/>
+    <img src="../IDM221-el686/Images/tss/sell.jpg" alt="The Hard Sell" class="container-image"/>
+    <img src="../IDM221-el686/Images/tss/stone.jpg" alt="The Stone" class="container-image"/>
+    <img src="../IDM221-el686/Images/tss/trail.jpg" alt="Trail" class="container-image"/>
     </body>
    <footer>
        <a href="#top">Back to the Top</a>
