--- a/Index.html
+++ b/Index.html
@@ -27,17 +27,19 @@
 
     <!-- Navigation Bar -->
     <nav>
-        <ul id="nav-links" class="nav-links">
-            <li><a href="work.html">My Work</a></li>
-            <li><a href="Index.html">About Me</a></li>
-            <li><a href="book.html">Susan Sontag Series</a></li>
-            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
-            <li><a href="minhwa.html">Minhwa Coffee</a></li>
-            <li><a href="tss.html">The Smart Set Illustrations</a></li>
-            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
-            <li><a href="onni.html">Onni</a></li>
-
-        </ul>
+        <div class ="nav-container">
+            <button class ="exit-button" onclick="toggleMenu()">X</button>
+              <ul id="nav-links" class="nav-links">
+                <li><a href="work.html">My Work</a></li>
+                <li><a href="Index.html">About Me</a></li>
+                <li><a href="book.html">Susan Sontag Series</a></li>
+                <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
+                <li><a href="minhwa.html">Minhwa Coffee</a></li>
+                <li><a href="tss.html">The Smart Set Illustrations</a></li>
+                <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
+                <li><a href="onni.html">Onni</a></li>
+             </ul>
+        </div>
     </nav>
 
     <!-- Main Content Section -->
