--- a/book.html
+++ b/book.html
@@ -26,7 +26,7 @@
         <!-- Initially hidden links, shown when hamburger menu is clicked -->
         <ul class="nav-links" id="nav-links">
             <li><a href="work.html">My Work</a></li>
-            <li><a href="Index.html">About Me</a></li>
+            <li><a href="index.html">About Me</a></li>
             <li><a href="book.html">Susan Sontag Series</a></li>
             <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
             <li><a href="minhwa.html">Minhwa</a></li>
