Removing Java Script
wasn't able to organize the navigation bar, removing Java script

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
 
     <!-- Navigation Bar -->
     <nav>
-        <div class ="nav-container">
+        <div class ="nav-container" id="nav-container">
             <button class ="exit-button" onclick="toggleMenu()">X</button>
               <ul id="nav-links" class="nav-links">
                 <li><a href="work.html">My Work</a></li>
