Updates on Text, Images
Updating the header with another navigation (simpler version) and images

--- a/Index.html
+++ b/Index.html
@@ -6,18 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Esther Lee</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
-    <script src="script.js"></script>
 </head>
 
-<body>
-    <!-- Header with Hamburger -->
+<!-- Full header -->
     <header>
-        <div class="hamburger-menu" onclick="toggleMenu ()">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </div>
-
         <div class="logo">
             <a href="index.html">
                 <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
@@ -28,44 +20,29 @@
     <!-- Navigation Bar -->
     <nav>
         <div class ="nav-container" id="nav-container">
-            <button class ="exit-button" onclick="toggleMenu()">X</button>
               <ul id="nav-links" class="nav-links">
                 <li><a href="work.html">My Work</a></li>
-                <li><a href="Index.html">About Me</a></li>
-                <li><a href="book.html">Susan Sontag Series</a></li>
-                <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
-                <li><a href="minhwa.html">Minhwa Coffee</a></li>
-                <li><a href="tss.html">The Smart Set Illustrations</a></li>
-                <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
-                <li><a href="onni.html">Onni</a></li>
-             </ul>
+                <li><a href="index.html">About Me</a></li>
         </div>
     </nav>
 
     <!-- Main Content Section -->
     <section class="profile">
         <div class="profile-pic"></div> 
-        <h1>Hey, it’s Esther!</h1>
+        <h1>I'm Esther Lee</h1>
         <p>
-            Nice to meet you ~ I’m a designer with a fine arts background and a Bachelor of Graphic Design, 
-            along with an Interactive Digital Media minor from Drexel University. <br><br> My work focuses on brand identity, 
+            Nice to meet you ~ I’m a designer with a fine arts background and a Bachelor of Graphic Design from Drexel University. <br><br> My work focuses on brand identity, 
             illustration, and typography layouts, and I've recently developed an interest in creating stickers. When I'm 
             not designing, I love exploring Philadelphia's cafes and magazine shops!
         </p>
     </section>
 
-    <!--Navigation Mid Way-->
-    <section class="mid-nav">
-        <a href="work.html">My Work</a>
-    </section>
-
-
     <!-- Contact Section -->
     <section class="contact">
-        <p>Let's Connect!</p>
-        <p>My Contact: <a href="mailto:el686@drexel.edu">el686@drexel.edu</a></p>
-        <p><a href="https://www.linkedin.com/in/esther-lee-05ba84276/">LinkedIn</a></p>
-        <p><a href="https://www.instagram.com/esthercreativity/?hl=en">Instagram</a></p>
+        <p class="connect-text">Let's Connect!</p>
+        <p>Contact me: <a href="mailto:el686@drexel.edu">el686@drexel.edu</a></p>
+        <p class="link-text"><a href="https://www.linkedin.com/in/esther-lee-05ba84276/">LinkedIn</a></p>
+        <p class="link-text"><a href="https://www.instagram.com/esthercreativity/?hl=en">Instagram</a></p>
     </section>
 
     <!-- Profile Image -->
@@ -73,16 +50,8 @@
 
     <!-- Footer -->
     <footer>
-        <a href="#top">Back to the Top</a>
+        <a href="#top">Back to the Top &#8593</a>
     </footer>
-
-<!-- JavaScript for Menu-->
-    <script>
-        function toggleMenu() {
-            const navLinks = document.getElementById('nav-links');
-            navLinks.classList.toggle('active');
-        }
-    </script>
 
 </body>
 
