--- a/book.html
+++ b/book.html
@@ -6,37 +6,25 @@
  <title>Portfolio - Esther Lee - book series</title>
  </head>
  <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
-    <!-- Hamburger Menu Icon -->
-    <header>
-        <div class="hamburger-menu">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </header>
+</head>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <!-- Clicking on logo will navigate to index.html -->
-            <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-            </a>
-        </div>
-        <!-- Initially hidden links, shown when hamburger menu is clicked -->
-        <ul class="nav-links" id="nav-links">
+ <!-- Full header -->
+<header>
+    <div class="logo">
+        <a href="index.html">
+            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+        </a>
+    </div>
+</header>
+
+<!-- Navigation Bar -->
+<nav>
+    <div class ="nav-container" id="nav-container">
+          <ul id="nav-links" class="nav-links">
             <li><a href="work.html">My Work</a></li>
             <li><a href="index.html">About Me</a></li>
-            <li><a href="book.html">Susan Sontag Series</a></li>
-            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
-            <li><a href="minhwa.html">Minhwa</a></li>
-            <li><a href="tss.html">The Smart Set Illustrations</a></li>
-            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
-            <li><a href="onni.html">Onni</a></li>
-
-        </ul>
-    </nav>
-
+    </div>
+</nav>
 
 <!--Content-->
 
@@ -48,10 +36,11 @@
  <img src="Images/bookseries/against.jpg" alt="Against Interpretation" class="container-image"/>
  <img src="Images/bookseries/photography.jpg" alt="On Photography" class="container-image"/>
  <img src="Images/bookseries/camp.jpg" alt="Notes on Camp" class="container-image" />
-</body
+</body>
 
- <footer>
-    <a href="#top">Back to the Top</a>
+<!--Footer-->
+<footer>
+    <a href="#top">Back to the Top &#8593</a>
 </footer>
 
 </body>
