--- a/star.html
+++ b/star.html
@@ -7,35 +7,25 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
 </head>
 <body>
-    <!-- Hamburger Menu Icon -->
+
+<!-- Full header -->
     <header>
-        <div class="hamburger-menu">
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="logo">
+            <a href="index.html">
+                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+            </a>
         </div>
     </header>
 
     <!-- Navigation Bar -->
     <nav>
-        <div class="logo">
-            <!-- Clicking on logo will navigate to index.html -->
-            <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-            </a>
+        <div class ="nav-container" id="nav-container">
+              <ul id="nav-links" class="nav-links">
+                <li><a href="work.html">My Work</a></li>
+                <li><a href="index.html">About Me</a></li>
         </div>
-        <!-- Initially hidden links, shown when hamburger menu is clicked -->
-        <ul class="nav-links" id="nav-links">
-            <li><a href="work.html">My Work</a></li>
-            <li><a href="index.html">About Me</a></li>
-            <li><a href="book.html">Susan Sontag Series</a></li>
-            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
-            <li><a href="minhwa.html">Minhwa</a></li>
-            <li><a href="tss.html">The Smart Set Illustrations</a></li>
-            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
-            <li><a href="onni.html">Onni</a></li>
-        </ul>
     </nav>
+
 
      <!--Content-->
     <title>2024 Star Scholars Summer Showcase</title>
@@ -52,7 +42,7 @@
     <!--footer-->
 
     <footer>
-        <a href="#top">Back to the Top</a>
+        <a href="#top">Back to the Top &#8593</a>
     </footer>
 
     </html>
