--- a/work.html
+++ b/work.html
@@ -1,62 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>My Work</title>
- <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Work</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-    <!-- Hamburger Menu Icon -->
-    <header>
-        <div class="hamburger-menu">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </header>
+<!-- Full header -->
+<header>
+    <div class="logo">
+        <a href="index.html">
+            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+        </a>
+    </div>
+</header>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <!-- Clicking on logo will navigate to index.html -->
-            <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-            </a>
-        </div>
-        <!-- Initially hidden links, shown when hamburger menu is clicked -->
-        <ul class="nav-links" id="nav-links">
+<!-- Navigation Bar -->
+<nav>
+    <div class ="nav-container" id="nav-container">
+          <ul id="nav-links" class="nav-links">
             <li><a href="work.html">My Work</a></li>
             <li><a href="index.html">About Me</a></li>
-            <li><a href="book.html">Susan Sontag Series</a></li>
-            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
-            <li><a href="minhwa.html">Minhwa Coffee</a></li>
-            <li><a href="tss.html">The Smart Set Illustrations</a></li>
-            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
-            <li><a href="onni.html">Onni</a></li>
+    </div>
+</nav>
 
-        </ul>
-    </nav>
-
-</head>
 <body>
  <h1>My Work</h1>
  <p>This is a collection of my graphic design work which involves book design, branding, article illustrations and rebrands.</p>
- <h2>Susan Sontag Series</h2>
- <img src="../IDM221-el686/Images/thumbnails/1.jpg" alt="susan sontag series" class="container-image"/>
- <h2>Philadephia Corporation for Aging</h2>
- <img src="../IDM221-el686/Images/thumbnails/3.jpg" alt="philadelphia corporation for aging" class="container-image"/>
- <h2>Minhwa Coffee</h2>
- <img src="../IDM221-el686/Images/thumbnails/2.jpg" alt="minhwa coffee" class="container-image"/>
-<h2>The Smart Set</h2>
-<img src="../IDM221-el686/Images/thumbnails/1.jpg" alt="the smart set" class="container-image"/>
-<h2>2024 Star Scholars Summer Showcase</h2>
-<img src="../IDM221-el686/Images/thumbnails/5.jpg" alt="2024 Star Summer Showcase" class="container-image"/>
+ 
+ <a href="book.html" class="title-link">
+    <h2>Susan Sontag Series</h2>
+</a>
+ <a href="book.html">
+    <img src="Images/thumbnails/4.jpg" alt="susan sontag series" class="container-image">
+</a>
+
+<a href="pca.html" class="title-link">
+    <h2>Philadelphia Corporation for Aging</h2>
+</a>
+<a href="pca.html">
+    <img src="Images/thumbnails/3.jpg" alt="philadelphia corporation for aging" class="container-image">
+</a>
+
+<a href="minhwa.html" class="title-link">
+    <h2>Minhwa Coffee</h2>
+</a>
+<a href="minhwa.html" class="title-link">
+    <img src="Images/thumbnails/2.jpg" alt="minhwa cofee" class="container-image">
+</a>
+
+<a href="tss.html" class="title-link">
+    <h2>The Smart Set</h2>
+<a href="tss.html">
+    <img src="Images/thumbnails/1.jpg" alt="the smart set" class="container-image">
+</a>
+
+<a href="star.html" class="title-link"></a>
+<h2>2024 Star Summer Showcase</h2>
+<a href="star.html">
+    <img src="Images/thumbnails/5.jpg" alt="2024 Star Summer Showcase" class="container-image">
+</a>
+
+<a href="onni.html" class="title-link"></a>
 <h2>Onni Project</h2>
-<img src="../IDM221-el686/Images/thumbnails/6.jpg" alt="2024 Star Summer Showcase" class="container-image"/>
+<a href="onni.html">
+    <img src="Images/thumbnails/6.jpg" alt="Onni Project" class="container-image">
+</a>
 </body>
 </html>
 
 <footer>
-    <a href="#top">Back to the Top</a>
+    <a href="#top">Back to the Top &#8593</a>
 </footer>
