--- a/book.html
+++ b/book.html
@@ -32,7 +32,7 @@
 </head>
 <body>
  <h1>Susan Sontag Book Series</h1>
- <p>This book cover series reinterprets Susan Sontag’s iconic works through bold, modern design. Each cover uses a structured grid, striking patterns, and textured overlays to capture the provocative essence of her essays.</p>
+ <p class="description">This book cover series reinterprets Susan Sontag’s iconic works through bold, modern design. Each cover uses a structured grid, striking patterns, and textured overlays to capture the provocative essence of her essays.</p>
  <img src="Images/bookseries/against.jpg" alt="Against Interpretation" class="container-image"/>
  <img src="Images/bookseries/photography.jpg" alt="On Photography" class="container-image"/>
  <img src="Images/bookseries/camp.jpg" alt="Notes on Camp" class="container-image" />
