--- a/minhwa.html
+++ b/minhwa.html
@@ -6,53 +6,41 @@
     <title>Portfolio - Esther Lee - Minhwa</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
 </head>
-<body>
-    <!-- Hamburger Menu Icon -->
-    <header>
-        <div class="hamburger-menu">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </header>
+ <!-- Full header -->
+ <header>
+    <div class="logo">
+        <a href="index.html">
+            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+        </a>
+    </div>
+</header>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <!-- Clicking on logo will navigate to index.html -->
-            <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-            </a>
-        </div>
-        <!-- Initially hidden links, shown when hamburger menu is clicked -->
-        <ul class="nav-links" id="nav-links">
+<!-- Navigation Bar -->
+<nav>
+    <div class ="nav-container" id="nav-container">
+          <ul id="nav-links" class="nav-links">
             <li><a href="work.html">My Work</a></li>
             <li><a href="index.html">About Me</a></li>
-            <li><a href="book.html">Susan Sontag Series</a></li>
-            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
-            <li><a href="minhwa.html">Minhwa</a></li>
-            <li><a href="tss.html">The Smart Set Illustrations</a></li>
-            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
-            <li><a href="onni.html">Onni</a></li>
-        </ul>
-    </nav>
-
+    </div>
+</nav>
     <!--Content-->
     <title>Minhwa Coffee</title>
 </head>
 <body>
  <h1>Minhwa Coffee Branding</h1>
- <p>Inspired by traditional Korean minhwa art, this coffee brand embodies encouragement and well-wishing through symbolic imagery like tigers, peonies, and carp. Each flavor highlights an iconic minhwa motif, with packaging designed for versatile settings, making it perfect for mornings and evenings. Ornamental graphics and meaningful designs aim to uplift with every sip.</p>
+ <p class="description">Inspired by traditional Korean minhwa art, this coffee brand embodies encouragement and well-wishing through symbolic imagery like tigers, peonies, and carp.</p>
  <img src="Images/minhwa/mint_digi.jpg" alt="Minhwa Coffee Mock Up" class="container-image"/>
  <img src="Images/minhwa/pink_digi.jpg" alt="Minhwa Coffee Mock Up 2" class="container-image" />
+ <p class="description"> Each flavor highlights an iconic minhwa motif, with packaging designed for versatile settings, making it perfect for mornings and evenings. Ornamental graphics and meaningful designs aim to uplift with every sip. </p>
  <img src="Images/minhwa/full.jpg" alt="Minhwa Collage" class="container-image"/>
  <img src="Images/minhwa/type.jpg" alt="Minhwa Branding" class="container-image"/>
  <img src="Images/minhwa/box.jpg" alt="Minhwa Box" class="container-image"/>
  <img src="Images/minhwa/can.jpg" alt="Minhwa Cans" class="container-image"/>
 </body>
 
- <footer>
-    <a href="#top">Back to the Top</a>
+<!--Footer-->
+<footer>
+    <a href="#top">Back to the Top &#8593</a>
 </footer>
 
 </html>
