--- a/pca.html
+++ b/pca.html
@@ -6,51 +6,42 @@
     <title>Portfolio - Esther Lee - PCA</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
 </head>
-<body>
-    <!-- Hamburger Menu Icon -->
-    <header>
-        <div class="hamburger-menu">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </header>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <!-- Clicking on logo will navigate to index.html -->
-            <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-            </a>
-        </div>
-        <!-- Initially hidden links, shown when hamburger menu is clicked -->
-        <ul class="nav-links" id="nav-links">
+ <!-- Full header -->
+ <header>
+    <div class="logo">
+        <a href="index.html">
+            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+        </a>
+    </div>
+</header>
+
+<!-- Navigation Bar -->
+<nav>
+    <div class ="nav-container" id="nav-container">
+          <ul id="nav-links" class="nav-links">
             <li><a href="work.html">My Work</a></li>
             <li><a href="index.html">About Me</a></li>
-            <li><a href="book.html">Susan Sontag Series</a></li>
-            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
-            <li><a href="minhwa.html">Minhwa</a></li>
-            <li><a href="tss.html">The Smart Set Illustrations</a></li>
-            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
-            <li><a href="onni.html">Onni</a></li>
-        </ul>
-    </nav>
+    </div>
+</nav>
 
             <!--Content-->
     <title>Onni</title>
     </head>
     <body>
-     <h1>Philadelphia Corporation for Aging</h1>
-     <p>Founded in 1973, the Philadelphia Corporation for Aging (PCA) is a nationally recognized agency supporting older Philadelphians and individuals with disabilities in achieving health, independence, and productivity. The PCA rebrand emphasizes the enriching lives of older adults, showcasing unity and positivity through intentional design.</p>
-     <img src="Images/pca/thumbnail.jpg" alt="PCA thumbnail" class="container-image"/>
-     <img src="Images/pca/food.jpg" alt="PCA food merchandise" class="container-image"/>
-     <img src="Images/pca/poster1.jpg" alt="PCA posters 1" class="container-image"/>
-     <img src="Images/pca/poster2.jpg" alt="PCA posters 2" class="container-image"/>
-     <img src="Images/pca/poster3.jpg" alt="PCA posters 3" class="container-image"/>
-</body>
-    <footer>
-        <a href="#top">Back to the Top</a>
-    </footer>
+        <h1>Philadelphia Corporation for Aging</h1>
+        <p class="description"> Founded in 1973, the Philadelphia Corporation for Aging (PCA) is a nationally recognized agency supporting older Philadelphians and individuals with disabilities in achieving health, independence, and productivity. </p>
+        <img src="Images/pca/thumbnail.jpg" alt="PCA thumbnail" class="container-image"/>
+        <img src="Images/pca/food.jpg" alt="PCA food merchandise" class="container-image"/>
+        <p class="description">The PCA rebrand emphasizes the enriching lives of older adults, showcasing unity and positivity through intentional design. </p>
+        <img src="Images/pca/poster1.jpg" alt="PCA posters 1" class="container-image"/>
+        <img src="Images/pca/poster2.jpg" alt="PCA posters 2" class="container-image"/>
+        <img src="Images/pca/poster3.jpg" alt="PCA posters 3" class="container-image"/>
+    </body>
+
+<!--Footer-->
+<footer>
+    <a href="#top">Back to the Top &#8593</a>
+</footer>
 
     </html>
