--- a/tss.html
+++ b/tss.html
@@ -6,49 +6,42 @@
     <title>Portfolio - Esther Lee - The Smart Set</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
 </head>
-<body>
-    <!-- Hamburger Menu Icon -->
-    <header>
-        <div class="hamburger-menu">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </header>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <!-- Clicking on logo will navigate to index.html -->
-            <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-            </a>
-        </div>
-        <!-- Initially hidden links, shown when hamburger menu is clicked -->
-        <ul class="nav-links" id="nav-links">
+ <!-- Full header -->
+ <header>
+    <div class="logo">
+        <a href="index.html">
+            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+        </a>
+    </div>
+</header>
+
+<!-- Navigation Bar -->
+<nav>
+    <div class ="nav-container" id="nav-container">
+          <ul id="nav-links" class="nav-links">
             <li><a href="work.html">My Work</a></li>
             <li><a href="index.html">About Me</a></li>
-            <li><a href="book.html">Susan Sontag Series</a></li>
-            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
-            <li><a href="minhwa.html">Minhwa</a></li>
-            <li><a href="tss.html">The Smart Set Illustrations</a></li>
-            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
-            <li><a href="onni.html">Onni</a></li>
-        </ul>
-    </nav>
+    </div>
+</nav>
 
     <!--content-->
     <body>
     <h1>The Smart Set Illustrations</h1>
-    <p>Before its discontinuation in 2024, The Smart Set was an online magazine covering pop culture, arts, science, and current affairs. Through a Pennoni Honors College co-op, weekly article illustrations were created, including a feature and an accompanying image for each narrative. The digital format offered an opportunity to experiment with diverse art styles for online publication.</p>
+    <p class="description">Before its discontinuation in 2024, The Smart Set was an online magazine covering pop culture, arts, science, and current affairs.</p>
     <img src="../IDM221-el686/Images/tss/debarges.jpg" alt="Debarges" class="container-image"/>
     <img src="../IDM221-el686/Images/tss/library.jpg" alt="Library" class="container-image"/>
     <img src="../IDM221-el686/Images/tss/pokey.jpg" alt="Pokey" class="container-image"/>
+    <p class="description">Through a Pennoni Honors College co-op, weekly article illustrations were created, including a feature and an accompanying image for each narrative. </p>
     <img src="../IDM221-el686/Images/tss/sell.jpg" alt="The Hard Sell" class="container-image"/>
     <img src="../IDM221-el686/Images/tss/stone.jpg" alt="The Stone" class="container-image"/>
     <img src="../IDM221-el686/Images/tss/trail.jpg" alt="Trail" class="container-image"/>
+    <p class="description"> The digital format offered an opportunity to experiment with diverse art styles for online publication.</p>
     </body>
-   <footer>
-       <a href="#top">Back to the Top</a>
-   </footer>
+    
+<!--Footer-->
+<footer>
+    <a href="#top">Back to the Top &#8593</a>
+</footer>
+
     </html>
