Adjustments to Other Pages

--- a/onni.html
+++ b/onni.html
@@ -6,53 +6,44 @@
     <title>Portfolio - Esther Lee - Onni</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link your CSS file -->
 </head>
-<body>
-    <!-- Hamburger Menu Icon -->
-    <header>
-        <div class="hamburger-menu">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </header>
 
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <!-- Clicking on logo will navigate to index.html -->
-            <a href="index.html">
-                <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
-            </a>
-        </div>
-        <!-- Initially hidden links, shown when hamburger menu is clicked -->
-        <ul class="nav-links" id="nav-links">
+ <!-- Full header -->
+ <header>
+    <div class="logo">
+        <a href="index.html">
+            <img src="Images/about/logo.png" alt="Esther Lee Logo" class="logo">
+        </a>
+    </div>
+</header>
+
+<!-- Navigation Bar -->
+<nav>
+    <div class ="nav-container" id="nav-container">
+          <ul id="nav-links" class="nav-links">
             <li><a href="work.html">My Work</a></li>
             <li><a href="index.html">About Me</a></li>
-            <li><a href="book.html">Susan Sontag Series</a></li>
-            <li><a href="pca.html">Philadelphia Corporation for Aging</a></li>
-            <li><a href="minhwa.html">Minhwa</a></li>
-            <li><a href="tss.html">The Smart Set Illustrations</a></li>
-            <li><a href="star.html">2024 Star Scholars Summer Showcase</a></li>
-            <li><a href="onni.html">Onni</a></li>
-        </ul>
-    </nav>
+    </div>
+</nav>
 
         <!--Content-->
     <title>Onni</title>
     </head>
     <body>
      <h1>The Creation of Onni</h1>
-     <p>This merchandise was created to welcome incoming freshmen to Pennoni Honors College, fostering a strong connection from the start of their Drexel journey. Distributed free of charge, the designs featured "Onni," a friendly dog character inspired by Drexel campus life and Gen Z trends. Guided by adjectives like relatable, fun, and inclusive, the design emphasizes simplicity and versatility, leaving a lasting impression on students.</p>
-     <img src="Images/onni/sticker_photo.jpg" alt="Onni Stickers"/>
-     <img src="Images/onni/sticker1.jpg" alt="Onni Stickers 1"/>
-     <img src="Images/onni/sticker2.jpg" alt="Onni Stickers 2"/>
-     <img src="Images/onni/people.jpg" alt="Event Photos for Onni"/>
-     <img src="Images/onni/insta.jpg" alt="Onni Instagram 1"/>
-     <img src="Images/onni/insta1.jpg" alt="Onni Instagra 2"/>
+     <p class="description">This merchandise was created to welcome incoming freshmen to Pennoni Honors College, fostering a strong connection from the start of their Drexel journey. </p>
+    <img src="Images/onni/sticker_photo.jpg" alt="Onni Stickers" class="container-image"/>
+    <p class="description">Distributed free of charge, the designs featured "Onni," a friendly dog character inspired by Drexel campus life and Gen Z trends.</p>
+     <img src="Images/onni/sticker1.jpg" alt="Onni Stickers 1" class="container-image"/>
+     <img src="Images/onni/sticker2.jpg" alt="Onni Stickers 2" class="container-image"/>
+     <img src="Images/onni/people.jpg" alt="Event Photos for Onni" class="container-image"/>
+     <p class="description">Guided by adjectives like relatable, fun, and inclusive, the design emphasizes simplicity and versatility, leaving a lasting impression on students.</p>
+     <img src="Images/onni/insta.jpg" alt="Onni Instagram 1" class="container-image"/>
+     <img src="Images/onni/insta1.jpg" alt="Onni Instagra 2" class="container-image"/>
     </body>
 
-        <footer>
-            <a href="#top">Back to the Top</a>
-        </footer>
+    <!-- Footer -->
+    <footer>
+        <a href="#top">Back to the Top &#8593</a>
+    </footer>
 
     </html>
