--- a/star.html
+++ b/star.html
@@ -32,11 +32,13 @@
     </head>
     <body>
      <h1>2024 Star Scholars Summer Showcase</h1>
-     <p>The STAR Scholars Summer Showcase celebrates the research and creative work of Drexel’s STAR Scholars in the Undergraduate Research and Enrichment Program. This booklet design incorporates the program’s type logo to represent each student’s unique “star” value in their research. Used during the final week of the Summer Term, the design also supported the event with wayfinding and presenter name tags.</p>
+     <p class="description">The STAR Scholars Summer Showcase celebrates the research and creative work of Drexel’s STAR Scholars in the Undergraduate Research and Enrichment Program.</p>
      <img src="Images/star/front.jpg" alt="2024 Star Scholars Front Cover" class="container-image"/>
      <img src="Images/star/back.jpg" alt="2024 Star Scholars Back Cover"  class="container-image"/>
+     <p class="description">This booklet design incorporates the program’s type logo to represent each student’s unique “star” value in their research.</p>
      <img src="Images/star/deskstand.jpg" alt="2024 Star Scholars Desk Stand" class="container-image"/>
      <img src="Images/star/card.jpg" alt="2024 Star Scholars Card"  class="container-image"/>
+     <p class="description">Used during the final week of the Summer Term, the design also supported the event with wayfinding and presenter name tags.</p>
     </body>
 
     <!--footer-->
