--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
     </section>
 
     <!-- Profile Image -->
-    <img src="../IDM221-el686/Images/about/esther.jpg" alt="esther profile image" class="container-image"/>
+    <img src="Images/about/esther.jpg" alt="esther profile image" class="container-image"/>
 
     <!-- Footer -->
     <footer>
